@@ -30,3 +30,7 @@ use = egg:FakeApp#configed
 set def2 = TEST
 get def1 = def1
 get foo = def2
+
+[app:test_global_conf]
+use = egg:FakeApp#configed
+test_interp = this:%(inherit)s
